# ArchiveTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json
.github/workflows/: build-windows.yml  build.yml  release.yml
installer/: archivetool.iss
resources/: resources.qrc
src/: main.cpp  preload.js
src/db/: Database.cpp  Database.h  Schema.cpp  Schema.h
src/main/: auth.js  db.js  eadExport.js  import.js  ipc.js  main.js  settings.js
src/model/: Models.h
src/renderer/: index.html  styles.css
src/renderer/js/: api.js  app.js  util.js
src/renderer/js/views/: dashboard.js  doctypes.js  export.js  import.js  records.js  rewind.js  sheets.js  users.js
src/repository/: AttachmentRepository.cpp  AttachmentRepository.h  CategoryRepository.cpp  CategoryRepository.h  FieldRepository.cpp  FieldRepository.h  ItemRepository.cpp  ItemRepository.h  LabelRepository.cpp  LabelRepository.h  SqlUtil.h
src/ui/: CategoryManagerDialog.cpp  CategoryManagerDialog.h  FieldEditorDialog.cpp  FieldEditorDialog.h  ItemEditorDialog.cpp  ItemEditorDialog.h  ItemTableModel.cpp  ItemTableModel.h  LabelManagerDialog.cpp  LabelManagerDialog.h  MainWindow.cpp  MainWindow.h
tests/: launch.js  run-tests.js
